# OpenGL

./: CMakeLists.txt  Main.cpp  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Dependencies/lib/cmake/glew/: glew-targets-release.cmake  glew-targets.cmake
Headers/: FileReader.h  Shader.h
Shader/: StandardFragmentShader.glsl  StandardVertexShader.glsl
